# graph-rag-demo

./: .env.example  .gitignore  README.md  knowledge_graph_schema.md  main.py  pyproject.toml
schemas/: gdelt_markets.yaml
src/: config.py  pipeline.py
src/generation/: generator.py  prompts.py
src/graph/: client.py  queries.py
src/ingestion/: __init__.py  base.py
src/mcp_server/: __init__.py  __main__.py  models.py  server.py
src/models/: __init__.py  base.py  registry.py
src/models/llama_cpp/: __init__.py
src/models/reranker/: __init__.py
src/retrieval/: hybrid_retriever.py
src/schema/: __init__.py  loader.py  models.py
tests/: test_imports.py  test_mcp_server.py  test_model_registry.py  test_schema_loader.py
